@@ -32,7 +32,6 @@ export(readNWISgwl)
 export(readNWISmeas)
 export(readNWISpCode)
 export(readNWISpeak)
-export(readNWISqw)
 export(readNWISrating)
 export(readNWISsite)
 export(readNWISstat)
