@@ -1,79 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/readNWISqw.R
-\name{readNWISqw}
-\alias{readNWISqw}
-\title{Raw Data Import for USGS NWIS QW Data}
-\usage{
-readNWISqw(
-  siteNumbers,
-  parameterCd,
-  startDate = "",
-  endDate = "",
-  expanded = TRUE,
-  reshape = FALSE,
-  tz = "UTC"
-)
-}
-\arguments{
-\item{siteNumbers}{character of USGS site numbers.  This is usually an 8 digit number}
-
-\item{parameterCd}{character that contains the code for a parameter
-group, or a character vector of 5-digit parameter codes. See \bold{Details}.}
-
-\item{startDate}{character starting date for data retrieval in the form YYYY-MM-DD.
-Default is "" which indicates
-retrieval for the earliest possible record. Date arguments are always specified in local time.}
-
-\item{endDate}{character ending date for data retrieval in the form YYYY-MM-DD.
-Default is "" which indicates
-retrieval for the latest possible record. Date arguments are always specified in local time.}
-
-\item{expanded}{logical defaults to \code{TRUE}. If \code{TRUE}, retrieves
-additional information. Expanded data includes
-remark_cd (remark code), result_va (result value), val_qual_tx
-(result value qualifier code), meth_cd (method code),
-dqi_cd (data-quality indicator code), rpt_lev_va (reporting level), and
-rpt_lev_cd (reporting level type). If \code{FALSE},
-only returns remark_cd (remark code) and result_va (result value).
-Expanded = \code{FALSE} will not give
-sufficient information for unbiased statistical analysis.}
-
-\item{reshape}{logical, reshape the expanded data. If \code{TRUE}, then return
-a wide data frame with all water-quality in a single row for each sample.
-If \code{FALSE} (default), then return a long data frame with each water-quality result in a single row. This
-argument is only applicable to expanded data. Data requested using \code{expanded=FALSE}
-is always returned in the wide format.}
-
-\item{tz}{character to set timezone attribute of dateTime. Default is "UTC", and converts the
-date times to UTC, properly accounting for daylight savings times based on the
-data's provided tz_cd column.
-Possible values to provide are "America/New_York", "America/Chicago",
-"America/Denver", "America/Los_Angeles", "America/Anchorage", as well as the
-following which do not use daylight savings time: "America/Honolulu",
-"America/Jamaica", "America/Managua", "America/Phoenix", and "America/Metlakatla".
-See also  \code{OlsonNames()}
-for more information on time zones.}
-}
-\value{
-A data frame not including USGS data newer than March 11, 2024.
-}
-\description{
-Deprecated function. USGS NWIS QW services will be discontinued, when that happens
-this function will be removed from dataRetrieval. Please use\code{\link{readWQPqw}} or 
-\code{\link{readWQPdata}} instead.
-}
-\details{
-As of March 11, 2024, NWIS discrete water quality services are "frozen": 
-any public data retrieval will not include any new data. 
-
-Contact CompTools@usgs.gov with additional questions!
-}
-\seealso{
-\code{\link{readWQPdata}}, \code{\link{whatWQPsites}},
-\code{\link{readWQPqw}}, \code{\link{constructNWISURL}}
-}
-\keyword{USGS}
-\keyword{data}
-\keyword{import}
-\keyword{service}
-\keyword{web}
